--- a/_config.yml
+++ b/_config.yml
@@ -3,26 +3,25 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Mohammadhossein
+first_name: Hossein 
 middle_name:
-last_name: Malekpour
-email: mohammadhossein.malekpour@gmail.com
+last_name: Samiei
+email: seyhsamiei@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
 
-keywords: mohammadhossein-malekpour, ai, machine-learning  # add your own keywords or leave empty
+keywords: Hossein-Samiei, Blockchain, Distributed-systems  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
-url: https://mh-malekpour.github.io # the base hostname & protocol for your site
+url: https://seyhsamiei.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
 # -----------------------------------------------------------------------------
-# Theme
 # -----------------------------------------------------------------------------
 
 # code highlighter theme
