--- a/_config.yml
+++ b/_config.yml
@@ -64,15 +64,15 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: mh-malekpour
+github_username: shsamiei 
 gitlab_username: # your GitLab user name
-twitter_username: mh_malekpour
-linkedin_username: mh-malekpour
+twitter_username: Hossein_Samieii
+linkedin_username: syhsamiei
 scholar_userid: # your Google Scholar ID
 semanticscholar_id: # your Semantic Scholar ID
 whatsapp_number: # your WhatsApp number (full phone number in international format. Omit any zeroes, brackets, or dashes when adding the phone number in international format.)
 orcid_id: # your ORCID ID
-medium_username: mh_malekpour
+medium_username: # syhsamiei
 quora_username: # your Quora username
 publons_id: # your ID on Publons
 research_gate_profile: # your profile on ResearchGate
@@ -82,14 +82,14 @@ keybase_username: # your keybase user name
 wikidata_id: # your wikidata id
 dblp_url: # your DBLP profile url
 stackoverflow_id: # your stackoverflow id
-kaggle_id: mhmalekpour
+kaggle_id: #syhsamiei
 lastfm_id: # your lastfm id
 spotify_id: # your spotify id
 pinterest_id: # your pinterest id
 unsplash_id: # your unsplash id
-instagram_id: mh_malekpour
+instagram_id: shsamiei
 facebook_id: # your facebook id
-discord_id: # your discord id (18-digit unique numerical identifier)
+discord_id: # your id 
 
 contact_note: >
   You can reach by E-mail.
@@ -108,7 +108,7 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: Malekpour's Blog # blog_name will be displayed in your blog page
+blog_name: Samiei's Blog # blog_name will be displayed in your blog page
 blog_nav_title: Blog # your blog must have a title for it to be displayed in the nav bar
 blog_description:
 permalink: /blog/:year/:title/
@@ -118,15 +118,18 @@ pagination:
   enabled: true
 
 # Comments
-disqus_shortname: malekpour-blog # put your disqus shortname
+disqus_shortname: Samiei-blog # put your disqus shortname
 # https://help.disqus.com/en/articles/1717111-what-s-a-shortname
 
 # External sources.
 # If you have blog posts published on medium.com or other exteranl sources,
 # you can display them in your blog by adding a link to the RSS feed.
-external_sources:
-  - name: medium.com
-    rss_url: https://medium.com/@mh_malekpour/feed
+
+
+
+# external_sources:
+#   - name: medium.com
+#     rss_url: https://medium.com/@mh_malekpour/feed
 
 # -----------------------------------------------------------------------------
 # Collections
@@ -220,7 +223,7 @@ jekyll-archives:
     tag: '/blog/tag/:name/'
     category: '/blog/category/:name/'
 
-display_tags: ['ai', 'tech', 'crypto', 'math', 'code'] # this tags will be dispalyed on the front page of your blog
+display_tags: ['Blockchain', 'tech', 'crypto', 'decentralized', 'code'] # this tags will be dispalyed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
